[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/Robots(enemies)/PNG/Poses HD/character_robot_walk1.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Robots(enemies)/PNG/Poses HD/walk_0_mirror.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/Robots(enemies)/PNG/Poses HD/character_robot_walk3.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/Robots(enemies)/PNG/Poses HD/character_robot_duck.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/Robots(enemies)/PNG/Poses HD/walk_1_mirror.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "crawl right",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "crawl left",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.74535, 11.0188 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.4148, 0.703249 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.04751, 11.9944 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1316, 0.146155 )
frames = SubResource( 1 )
animation = "crawl left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.17494, 7.32602 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0, -0.371 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -0.279446, -7.48389 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0.301384, 6.29012 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
